--- a/original/Makefile
+++ b/original/Makefile
@@ -1,29 +1,30 @@
 # PROGRAMA
-    PROG = ajustePol gera_entrada
+PROG = ajustePol gera_entrada
 
 # Compilador
-    CC     = gcc
-    CFLAGS = -O3 -DLIKWID_PERFMON -I/usr/local/include 
-    LFLAGS = -lm -L/usr/local/lib -llikwid
+CC     = gcc
+CFLAGS = -O3 -mavx -march=native -DLIKWID_PERFMON -I/usr/local/include 
+LFLAGS = -lm -L/usr/local/lib -llikwid
 
 # Lista de arquivos para distribuição.
-# LEMBRE-SE DE ACRESCENTAR OS ARQUIVOS ADICIONAIS SOLICITADOS NO ENUNCIADO DO TRABALHO
 DISTFILES = *.c *.h LEIAME* Makefile 
 DISTDIR = `basename ${PWD}`
 
 .PHONY: all clean purge dist
 
+all: $(PROG)
+
 ajustePol: ajustePol.c utils.c
-	gcc -o $@ $(CFLAGS) $^ $(LFLAGS)
+	$(CC) -o $@ $(CFLAGS) $^ $(LFLAGS)
 
 gera_entrada: gera_entrada.c
-	gcc -o $@ $^ -lm
+	$(CC) -o $@ $(CFLAGS) $^ -lm
 
 clean:
 	@echo "Limpando sujeira ..."
-	@rm -f *~ *.bak core 
+	@rm -f *~ *.bak core
 
-purge:  clean
+purge: clean
 	@echo "Limpando tudo ..."
 	@rm -f $(PROG) *.o a.out $(DISTDIR) $(DISTDIR).tar
 
@@ -32,3 +33,38 @@ dist: purge
 	@ln -s . $(DISTDIR)
 	@tar -cvf $(DISTDIR).tar $(addprefix ./$(DISTDIR)/, $(DISTFILES))
 	@rm -f $(DISTDIR)
+
+# # PROGRAMA
+#     PROG = ajustePol gera_entrada
+
+# # Compilador
+#     CC     = gcc
+#     CFLAGS = -O3 -DLIKWID_PERFMON -I/usr/local/include 
+#     LFLAGS = -lm -L/usr/local/lib -llikwid
+
+# # Lista de arquivos para distribuição.
+# # LEMBRE-SE DE ACRESCENTAR OS ARQUIVOS ADICIONAIS SOLICITADOS NO ENUNCIADO DO TRABALHO
+# DISTFILES = *.c *.h LEIAME* Makefile 
+# DISTDIR = `basename ${PWD}`
+
+# .PHONY: all clean purge dist
+
+# ajustePol: ajustePol.c utils.c
+# 	gcc -o $@ $(CFLAGS) $^ $(LFLAGS)
+
+# gera_entrada: gera_entrada.c
+# 	gcc -o $@ $^ -lm
+
+# clean:
+# 	@echo "Limpando sujeira ..."
+# 	@rm -f *~ *.bak core 
+
+# purge:  clean
+# 	@echo "Limpando tudo ..."
+# 	@rm -f $(PROG) *.o a.out $(DISTDIR) $(DISTDIR).tar
+
+# dist: purge
+# 	@echo "Gerando arquivo de distribuição ($(DISTDIR).tar) ..."
+# 	@ln -s . $(DISTDIR)
+# 	@tar -cvf $(DISTDIR).tar $(addprefix ./$(DISTDIR)/, $(DISTFILES))
+# 	@rm -f $(DISTDIR)
